2006-05-30  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py: Other code places should allow
	menu paths to be None too.

2006-05-30  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py: Allow menu paths to be None.

2006-05-30  Manish Singh  <yosh@gimp.org>

	* app/file/gimprecentlist.c: #define _GNU_SOURCE instead of
	_SVID_SOURCE, so we get all the declarations we need. Fixes
	bug #342390.

2006-05-29  Manish Singh  <yosh@gimp.org>

	* libgimpwidgets/gimpchainbutton.c
	* libgimpwidgets/gimppixmap.c: #include "config.h"

2006-05-29  Manish Singh  <yosh@gimp.org>

	* app/errors.c
	* app/main.c
	* app/file/gimprecentlist.c
	* libgimp/gimp.c
	* libgimpbase/gimpsignal.c
	* modules/cdisplay_lcms.c
	* modules/cdisplay_proof.c
	* modules/controller_midi.c
	* plug-ins/common/gqbist.c
	* plug-ins/metadata/xmp-schemas.h: miscellaneous fixes for building
	with -ansi -pedantic. Mostly #define _FOO_SOURCE stuff. Thanks to
	Daniel Richard G. for the patch. Fixes bug #342390.

2006-05-30  Tor Lillqvist  <tml@novell.com>

	* libgimpwidgets/gimpwidgets.def: Sync.

2006-05-29  Sven Neumann  <sven@gimp.org>

	* configure.in: use PANGO_DISABLE_DEPRECATED for pango < 0.13.0.

	* app/text/gimptext-vectors.c: added const qualifiers to the
	FT_Vector parameters of the FT_Outline_Funcs.

2006-05-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdialogfactory.c
	(gimp_dialog_factory_dialog_new_internal): code cleanup; only call
	gtk_window_present() if called with present == TRUE.

2006-05-29  Sven Neumann  <sven@gimp.org>

	* app/core/gimpbrushgenerated.c (gimp_brush_generated_load): don't
	choke on brush files with empty names (bug #343140).
	(gimp_brush_generated_save): warn about brushes with empty names.

2006-05-29  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdock.c (gimp_dock_key_press_event): make sure
	that text widgets get all key events first. Fixes bug #301006.

2006-05-29  Sven Neumann  <sven@gimp.org>
